[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigit"
version = "0.1.9"
authors = [
    { name = "Ignacio Alonso", email = "ignacio.alley@gmail.com" },
]
description = "A CLI tool to automatically generate git commit messages using OpenAI GPT-4"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "GitPython",
    "openai",
    "keyring",
    "instructor",
    "loguru",
    "tiktoken",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/nachoal/aig"

[project.scripts]
aig = "aigit.main:main"
